2005-12-28 Perry
 PATCH: [ 1391732 ] Do not offer to unify codepages in UNICODE build
  Also introduces new error IDS_DIFFERENT_UNICODINGS and new
   global function IsUnicodeBuild.
  Src: ConfigLog.cpp MainFrm.cpp Merge.rc resource.h StdAfx.cpp StdAfx.h

2005-12-27 Perry
 PATCH: [ 1390793 ] New global function GetOptionMgr
  Src: DirActions.cpp DirDoc.cpp DirView.cpp DirViewColHandler.cpp
   LocationView.cpp MainFrm.cpp MainFrm.h MergeDiffDetailView.cpp
   MergeDoc.cpp MergeEditView.cpp OpenDlg.cpp
  Src/Common: OptionsMgr.h

2005-12-27 Perry
 PATCH: [ 1382130 ] New line-based RCLocalizationHelper
  See plugins.

2005-12-26 Perry
 PATCH: [ 1388704 ] Simplified Chinese language .rc file for RC1
  Src/Languages/ChineseSimplified: MergeChineseSimplified.rc
 Update language versions of resource.h
  Src/Languages/*: resource.h

2005-12-25 Perry
 Update & synchronize translations: Danish Dutch French Hungarian Italian Japanese
  Src: Merge.rc
  Src/Languages:
   Danish: MergeDanish.rc
   Dutch: MergeDutch.rc
   French: MergeFrench.rc
   Hungarian: MergeHungarian.rc
   Italian: MergeItalian.rc
   Japanese: MergeJapanese.rc
 Remove needless cast
  Src/Common: unicoder.cpp
 Update & synchronize translations: Korean Norwegian Polish Russian
  Src: Merge.rc
  Src/Languages:
   Korean: MergeKorean.rc
   Norwegian: MergeNorwegian.rc
   Polish: MergePolish.rc
   Russian: MergeRussian.rc

2005-12-23 Kimmo
 PATCH: [ 1388456 ] Convert rest of folder compare bitmaps to icons
  Icons from Tim (Thanks!)
  Src: CompareStatisticsDlg.cpp DirView.cpp Merge.dsp Merge.rc resource.h
  Src/res added files: binarydiff.ico equalbinary.ico equalfile.ico error.ico
   fileskip.ico folderup.ico folderup_disable.ico lfile.ico notequalfile.ico
   rfile.ico sigma.ico unknown.ico
  Src/res removed files: binary.bmp binarydiff.bmp error.bmp fileskip.bmp
   folderup.bmp folderup_disable.bmp lfile.bmp notequal.bmp rfile.bmp
   sigma.bmp unknown.bmp
  Src/Languages: *.rc resource.h
