@@ -36,7 +36,7 @@
 <h3>COptionsMgr</h3>
 <p>Using <code>COptionsMgr</code> is recommended for all new options. Also all options
 visible in Options-dialog must use <code>COptionsMgr</code>. Currently there is one
-<code>COptionsMgr</code> (or actually <code>CRegOptions</code>) instance in <code>CMainFrame</code>.
+<code>COptionsMgr</code> (or actually <code>CRegOptionsMgr</code>) instance in <code>CMainFrame</code>.
 But that can change in future.</p>
 
 <p>Using <code>COptionsMgr</code> is pretty simple and straightforward:</p>
